# thermofeel-rs

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: helpers.rs  lib.rs
tests/: test.rs  test_scalars.rs
