[package]
name = "thermofeel-rs"
version = "0.1.0"
edition = "2024"
authors = ["Archie Atkinson <archieatkinson97@gmail.com>"]
description = "A library to calculate human thermal comfort indexes."
documentation = "https://docs.rs/thermofeel-rs"
keywords = ["utic", "heat index", "thermal confort", "indexes"]
license = "Apache-2.0"
repository = "https://github.com/ArchieAtkinson/thermofeel-rs"

[dependencies]

[dev-dependencies]
approx = "0.3"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
